fix(#3): try fix scrollbar

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -22,8 +22,8 @@ html:has(.modal[open]),
 body:has(.modal[open]) {
   /* overflow: hidden; */
   /* touch-action: none; */
-  position: fixed;
-  height: 100vh;
+  /* position: fixed; */
+  /* height: 100vh; */
 }
 
 
